// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/confirmationPopin should call onClick by default 1`] = `
<ConfirmationPopin
  className="default-theme"
  content="Can you confirm by clicking on OK, else click Cancel ?"
  defaultOpen={false}
  renderTrigger={[Function]}
  title="Confirmation title"
  withCancel={true}
  withOk={true}
>
  <Modal
    className="confirmation-popin default-theme"
    defaultOpen={false}
    onClose={[Function]}
    renderTrigger={[Function]}
    withClickOutside={false}
    withCloseIcon={false}
    withEscapeClose={false}
  >
    <OpenTrigger
      defaultOpen={false}
      onClose={[Function]}
      renderTrigger={[Function]}
      withEscapeClose={false}
    >
      <Button
        accent={false}
        block={false}
        error={false}
        loading={false}
        onClick={[Function]}
        primary={true}
        secondary={false}
        simple={false}
        size="normal"
        tertiary={false}
        type="button"
      >
        <button
          className="cc-button cc-button-primary"
          onClick={[Function]}
          type="button"
        >
          Open Confirmation Popin
        </button>
      </Button>
    </OpenTrigger>
  </Modal>
</ConfirmationPopin>
`;

exports[`components/confirmationPopin should call onClick by default 2`] = `
<ConfirmationPopin
  className="default-theme"
  content="Can you confirm by clicking on OK, else click Cancel ?"
  defaultOpen={false}
  renderTrigger={[Function]}
  title="Confirmation title"
  withCancel={true}
  withOk={true}
>
  <Modal
    className="confirmation-popin default-theme"
    defaultOpen={false}
    onClose={[Function]}
    renderTrigger={[Function]}
    withClickOutside={false}
    withCloseIcon={false}
    withEscapeClose={false}
  >
    <OpenTrigger
      defaultOpen={false}
      onClose={[Function]}
      renderTrigger={[Function]}
      withEscapeClose={false}
    >
      <Button
        accent={false}
        block={false}
        error={false}
        loading={false}
        onClick={[Function]}
        primary={true}
        secondary={false}
        simple={false}
        size="normal"
        tertiary={false}
        type="button"
      >
        <button
          className="cc-button cc-button-primary"
          onClick={[Function]}
          type="button"
        >
          Open Confirmation Popin
        </button>
      </Button>
      <Portal>
        <Portal
          containerInfo={
            <div
              class="portal"
            >
              <div
                class="backdrop"
                role="button"
              />
              <div
                class="modal confirmation-popin default-theme"
              >
                <div
                  class="confirmation-text"
                >
                  <div
                    class="confirmation-title"
                  >
                    Confirmation title
                  </div>
                  <div
                    class="confirmation-content"
                  >
                    Can you confirm by clicking on OK, else click Cancel ?
                  </div>
                </div>
                <div
                  class="confirmation-actions"
                >
                  <button
                    class="cc-button cc-button-secondary"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="cc-button cc-button-accent cc-button-primary"
                    type="button"
                  >
                    Ok
                  </button>
                </div>
              </div>
            </div>
          }
        >
          <Backdrop
            onClick={[Function]}
            withClickOutside={false}
          >
            <div
              className="backdrop"
              onClick={[Function]}
              role="button"
            />
          </Backdrop>
          <div
            className="modal confirmation-popin default-theme"
          >
            <div
              className="confirmation-text"
            >
              <div
                className="confirmation-title"
              >
                Confirmation title
              </div>
              <div
                className="confirmation-content"
              >
                Can you confirm by clicking on OK, else click Cancel ?
              </div>
            </div>
            <div
              className="confirmation-actions"
            >
              <Button
                accent={false}
                block={false}
                error={false}
                loading={false}
                onClick={[Function]}
                primary={true}
                secondary={true}
                simple={false}
                size="normal"
                tertiary={false}
              >
                <button
                  className="cc-button cc-button-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
              </Button>
              <Button
                accent={true}
                block={false}
                error={false}
                loading={false}
                onClick={[Function]}
                primary={true}
                secondary={false}
                simple={false}
                size="normal"
                tertiary={false}
              >
                <button
                  className="cc-button cc-button-accent cc-button-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Ok
                </button>
              </Button>
            </div>
          </div>
        </Portal>
      </Portal>
    </OpenTrigger>
  </Modal>
</ConfirmationPopin>
`;

exports[`components/confirmationPopin should render 1`] = `null`;
